--- a/car-dealer-app/public/index.html
+++ b/car-dealer-app/public/index.html
@@ -14,11 +14,47 @@
     <script defer src="/__/firebase/7.5.0/firebase-storage.js"></script>
     <!-- initialize the SDK after all desired features are loaded -->
     <script defer src="/__/firebase/init.js"></script>
-    
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+<style>
+
+#root {
+  padding: 50px;
+}
+
+#tableButtons
+{
+  padding: 10px;
+}
+
+#dataTable {
+opacity:0;  /* make things invisible upon start */
+	-webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+	-moz-animation:fadeIn ease-in 1;
+	animation:fadeIn ease-in 1;
+
+	-webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+	-moz-animation-fill-mode:forwards;
+	animation-fill-mode:forwards;
+
+	-webkit-animation-duration:1s;
+	-moz-animation-duration:1s;
+	animation-duration:1s;
+}
+
+.btn , .btn-primary {
+  margin-left: 5px;
+
+}
+
+</style>
+
 
   </head>
   <body>
+
+
     <div id="root">
       
     </div>
@@ -46,5 +82,26 @@
         }
       });
     </script>
+    <!--
+<div class="col-md-auto">
+<div class="row justify-content-center" id="tableButtons">
+  <Button class="btn btn-primary"  id="add-row"><i class="fas fa-plus"> Add Row</i></Button>
+<Button class="btn btn-primary" id="del-row"><i class="fas fa-minus"> Delete Row</i></Button>
+<Button class="btn btn-primary"  id="history-undo"><i class="fas fa-undo"> Undo</i></Button>
+<Button class="btn btn-primary" id="history-redo"><i class="fas fa-redo"> Redo</i></Button>
+<Button class="btn btn-primary" id="download-btn"><i class="fas fa-download"> Download As CSV</i></Button>
+-->
+
+</div>
+</div>
+
+<!--Detect viewport & Table Functions-->
+<script>
+if(window.innerHeight > window.innerWidth){
+    alert("Mobile device detected. For optimal viewing experience, tilt your device into landscape mode.");
+}
+
+</script>
+
   </body>
 </html>
